Fix clipping close button

--- a/app/assets/stylesheets/lightbox.css.sass
+++ b/app/assets/stylesheets/lightbox.css.sass
@@ -22,7 +22,6 @@
   bottom: 100px
   left: 100px
   right: 100px
-  overflow: hidden
   background:
     color: white
     position: center center
